gitops/apps/environments/production/wallabag/wallabag-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag

spec:
  replicas: 1

  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: wallabag
        apps.home.lab/environment: production
        apps.home.lab/workload: wallabag

    spec:
      terminationGracePeriodSeconds: 60

      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
                  - key: cnpg-ha
                    operator: NotIn
                    values:
                      - "true"

      containers:
        - name: wallabag

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault

          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /api/info
              port: http
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /api/info
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          startupProbe:
            httpGet:
              path: /api/info
              port: http
              scheme: HTTP
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 60

          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi

          volumeMounts:
            - name: wallabag-data
              mountPath: /var/www/wallabag/data

            - name: wallabag-images
              mountPath: /var/www/wallabag/web/assets/images

      volumes:
        - name: wallabag-data
          persistentVolumeClaim:
            claimName: wallabag-data

        - name: wallabag-images
          persistentVolumeClaim:
            claimName: wallabag-images
