gitops/apps/environments/production/wallabag/wallabag-vault-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
spec:
  template:
    spec:
      containers:
        - name: wallabag
